--- a/angular/src/app/components/shelves/bookshelf/bookshelf.component.html
+++ b/angular/src/app/components/shelves/bookshelf/bookshelf.component.html
@@ -33,10 +33,9 @@
                         </div>
 
                         <br>
-                        <table mat-table [dataSource]="dataSource" multiTemplateDataRows matSort
-                            class="mat-elevation-z2">
+                        <table mat-table [dataSource]="dataSource" multiTemplateDataRows matSort class="mat-elevation-z2">
                             <ng-container matColumnDef="title">
-                                <th mat-header-cell *matHeaderCellDef mat-sort-header> Title </th>
+                                <th mat-header-cell *matHeaderCellDef mat-sort-header  class="col-md-6-"> Title </th>
                                 <td mat-cell *matCellDef="let bookshelfItems"> {{bookshelfItems.book.title}} </td>
                             </ng-container>
                             <ng-container matColumnDef="author">
@@ -122,6 +121,93 @@
 
                 </div>
             </div>
+            
+
+            
+        </div>
+    </div>
+    <div class="row" *ngIf="bookshelfName">
+        <div class="col-lg-12 grid-margin stretch-card">
+            <div class="card">
+                <div class="card-body">
+                    <diV class="card-title">
+                        <h4>Listing Books</h4>
+                    </diV>
+                    
+                    <table mat-table [dataSource]="ListingbookshelfItems" multiTemplateDataRows matSort
+                            class="mat-elevation-z2">
+                            <ng-container matColumnDef="title">
+                                <th mat-header-cell *matHeaderCellDef mat-sort-header> Title </th>
+                                <td mat-cell *matCellDef="let bookshelfItems"> {{bookshelfItems.book.title}} </td>
+                            </ng-container>
+                            <ng-container matColumnDef="author">
+                                <th mat-header-cell *matHeaderCellDef mat-sort-header> Author </th>
+                                <td mat-cell *matCellDef="let bookshelfItems"> {{bookshelfItems.book.author}} </td>
+                            </ng-container>
+                            <ng-container matColumnDef="rating">
+                                <th mat-header-cell *matHeaderCellDef mat-sort-header> Rating </th>
+                                <td mat-cell *matCellDef="let bookshelfItems"> {{bookshelfItems.rating}} </td>
+                            </ng-container>
+                            <ng-container matColumnDef="status">
+                                <th mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
+                                <td mat-cell *matCellDef="let bookshelfItems">
+                                    <label *ngIf="bookshelfItems.status === 'IN_PROGRESS'"
+                                        class="badge badge-pill badge-warning">{{bookshelfItems.status}}</label>
+                                    <label *ngIf="bookshelfItems.status === 'FINISHED'"
+                                        class="badge badge-pill badge-success">{{bookshelfItems.status}}</label>
+                                    <label *ngIf="bookshelfItems.status === 'LISTING'"
+                                        class="badge badge-pill badge-light">{{bookshelfItems.status}}</label>
+                                    <label *ngIf="bookshelfItems.status === 'DNF'"
+                                        class="badge badge-pill badge-secondary">{{bookshelfItems.status}}</label>
+                                </td>
+                            </ng-container>
+
+
+                            <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
+                            <ng-container matColumnDef="expandedDetail">
+                                <td mat-cell *matCellDef="let element" [attr.colspan]="columnsToDisplay.length">
+                                    <div class="example-element-detail"
+                                        [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
+                                        <div class="col-lg-2 img-container">
+                                            <img src="{{element.book.imageUrl}}" class="img-thumbnail" alt="thumbnail">
+                                        </div>
+                                        <div class="col-lg-10 card-body">
+                                            <ul class="list-arrow">
+                                                <div class="row">
+                                                    <div class="col-md-10">
+                                                        <li>Published: {{element.book.published}}</li>
+                                                    </div>
+                                                    <div class="col-mdd-2 ml-auto">
+                                                        <button
+                                                            class="btn btn-sm btn-inverse-secondary btn-icon-text btn-icon-prepend"
+                                                            data-toggle="modal" data-target="#editListingBook"
+                                                            (click)="openEditBookshelfModal(element.id)">
+                                                            <i class="mdi mdi-auto-fix"></i>editbook
+                                                        </button>
+                                                    </div>
+                                                </div>
+                                                <li>Description: <p class="card-description">
+                                                        {{element.book.description}}
+                                                    </p>
+                                                </li>
+                                                <li>Reason: {{element.reason}} </li>
+                                                <li>Comment: {{element.comment}} </li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </td>
+                            </ng-container>
+                            <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
+                            <tr mat-row *matRowDef="let element; columns: columnsToDisplay;" class="example-element-row"
+                                [class.example-expanded-row]="expandedElement === element"
+                                (click)="expandedElement = expandedElement === element ? null : element">
+                            </tr>
+                            <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row">
+                            </tr>
+                        </table>
+                </div>
+            </div>
+            
         </div>
     </div>
 </div>
@@ -209,46 +295,111 @@
                     </div>
 
                     <div class="form-group row">
-                    <label for="status" class="col-sm-2 col-form-label">Status</label>
-                    <div class="col-sm-10 row">
-                        <div class="form-check form-check-inline form-check-success ">
-                            <label class="form-check-label">
-                                <input type="radio" value="FINISHED" formControlName="status">FINISHED
-                            </label>
+                        <label for="status" class="col-sm-2 col-form-label">Status</label>
+                        <div class="col-sm-10 row">
+                            <div class="form-check form-check-inline form-check-success ">
+                                <label class="form-check-label">
+                                    <input type="radio" value="FINISHED" formControlName="status">FINISHED
+                                </label>
+                            </div>
+                            <div class="form-check form-check-inline form-check-warning">
+                                <label class="form-check-label">
+                                    <input type="radio" value="IN_PROGRESS" formControlName="status">IN_PROGRESS
+                                </label>
+                            </div>
+                            <div class="form-check form-check-inline form-check-dark">
+                                <label class="form-check-label">
+                                    <input type="radio" value="DNF" formControlName="status">DNF
+                                </label>
+                            </div>
+                            <div class="form-check form-check-inline form-check-secondary">
+                                <label class="form-check-label">
+                                    <input type="radio" value="LISTING" formControlName="status">LISTING
+                                </label>
+                            </div>
                         </div>
-                        <div class="form-check form-check-inline form-check-warning">
-                            <label class="form-check-label">
-                                <input type="radio" value="IN_PROGRESS" formControlName="status">IN_PROGRESS
-                            </label>
-                        </div>
-                        <div class="form-check form-check-inline form-check-dark">
-                            <label class="form-check-label">
-                                <input type="radio" value="DNF" formControlName="status">DNF
-                            </label>
-                        </div>
-                        <div class="form-check form-check-inline form-check-secondary">
-                            <label class="form-check-label">
-                                <input type="radio" value="LISTING" formControlName="status">LISTING
-                            </label>
+                    </div>
+
+                    <div class="form-group row">
+                        <label for="comment" class="col-sm-2 col-form-label">Comment</label>
+                        <div class="col-sm-10">
+                            <textarea class="form-control" rows="4" formControlName="comment"></textarea>
                         </div>
                     </div>
                 </div>
 
-                <div class="form-group row">
-                    <label for="comment" class="col-sm-2 col-form-label">Comment</label>
-                    <div class="col-sm-10">
-                        <textarea class="form-control" rows="4" formControlName="comment"></textarea>
-                    </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary" data-dismiss="modal"
+                        (click)="updateBookshelfItem()">Update</button>
                 </div>
+            </form>
         </div>
-
-        <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary" data-dismiss="modal"
-                (click)="updateBookshelfItem()">Update</button>
-        </div>
-        </form>
     </div>
 </div>
+<!-- end of Modal edit BookshelfItem  -->
+
+
+<!-- Modal edit BookshelfItem -->
+<div class="modal fade" id="editListingBook" tabindex="-1" role="dialog" aria-labelledby="editListingBookLabel"
+    aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="editBookshelfItemLabel">{{currentBookTitle}}</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <form [formGroup]="bookshelfItemForm">
+                <div class="modal-body">
+                    <div class="form-group row">
+                        <label for="reason" class="col-sm-2 col-form-label">Reason</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" formControlName="reason">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="status" class="col-sm-2 col-form-label">Status</label>
+                        <div class="col-sm-10 row">
+                            <div class="form-check form-check-inline form-check-success ">
+                                <label class="form-check-label">
+                                    <input type="radio" value="FINISHED" formControlName="status">FINISHED
+                                </label>
+                            </div>
+                            <div class="form-check form-check-inline form-check-warning">
+                                <label class="form-check-label">
+                                    <input type="radio" value="IN_PROGRESS" formControlName="status">IN_PROGRESS
+                                </label>
+                            </div>
+                            <div class="form-check form-check-inline form-check-dark">
+                                <label class="form-check-label">
+                                    <input type="radio" value="DNF" formControlName="status">DNF
+                                </label>
+                            </div>
+                            <div class="form-check form-check-inline form-check-secondary">
+                                <label class="form-check-label">
+                                    <input type="radio" value="LISTING" formControlName="status">LISTING
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="form-group row">
+                        <label for="comment" class="col-sm-2 col-form-label">Comment</label>
+                        <div class="col-sm-10">
+                            <textarea class="form-control" rows="4" formControlName="comment"></textarea>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary" data-dismiss="modal"
+                        (click)="updateBookshelfItem()">Update</button>
+                </div>
+            </form>
+        </div>
+    </div>
 </div>
 <!-- end of Modal edit BookshelfItem  -->
